--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,1 +1,13 @@
 @import'reset';
+
+
+
+
+       
+
+    .footer_container_icones_list {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+    }
