--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -26,4 +26,11 @@ p, h1, h2, h3, h4, h5, h6 {
 
 #root, #__next {
   isolation: isolate;
+}
+
+.footer_container_icones_list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
 }/*# sourceMappingURL=style.css.map */
