--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,13 +1,7 @@
 @import'reset';
+@import'footer/footer';
 
 
 
 
        
-
-    .footer_container_icones_list {
-        list-style: none;
-        padding: 0;
-        display: flex;
-        justify-content: space-between;
-    }
