--- a/assets/scss/bodycard.css
+++ b/assets/scss/bodycard.css
@@ -1,33 +1,3 @@
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-}
-
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
-}
-
-input, button, textarea, select {
-  font: inherit;
-}
-
-p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
-}
-
-#root, #__next {
-  isolation: isolate;
-}
-
 /* BODY CARD */
 #card-container {
   display: flex;
@@ -135,10 +105,4 @@ p, h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     padding-top: 8px;
   }
-}
-.footer_container_icones_list {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
-}/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=bodycard.css.map */
