--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -86,36 +86,6 @@ p, h1, h2, h3, h4, h5, h6 {
   justify-content: center;
 }
 
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-}
-
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
-}
-
-input, button, textarea, select {
-  font: inherit;
-}
-
-p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
-}
-
-#root, #__next {
-  isolation: isolate;
-}
-
 /* BODY CARD */
 #card-container {
   display: flex;
@@ -212,7 +182,7 @@ p, h1, h2, h3, h4, h5, h6 {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
   }
-  a {
+  .order {
     background-color: #215F3F;
     color: white;
     border-radius: 10px;
@@ -224,57 +194,73 @@ p, h1, h2, h3, h4, h5, h6 {
     padding-top: 8px;
   }
 }
-<<<<<<< HEAD
-=======
-.footer_container_icones_list {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
->>>>>>> c33dff0aa6eb3f6150ceac48e1672d9b26b85001
 .footer {
   width: 100%;
-  background-color: #769e67;
+  background-color: #426d4a;
+}
+.footer .footer_contact {
+  width: 20%;
 }
 
-.footer_container_github img {
-  width: 150px;
-}
-
-.footer_container_about {
+.footer_container_contact {
   display: flex;
   justify-content: space-between;
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  height: auto;
+  font-family: "Dancing Script";
+  font-size: 20px;
+  padding-top: 35px;
+  color: white;
 }
-.footer_container_about img {
+.footer_container_contact strong {
+  font-size: 45px;
+}
+.footer_container_contact img {
   width: 450px;
 }
-.footer_container_about strong {
-  font-size: 30px;
+
+.footer_contact_contact_items {
+  width: 20%;
 }
-.footer_container_about .footer_container_liens_list {
-  text-decoration: none;
-  list-style: none;
+
+.footer_politiqueConfi {
+  display: flex;
+  background-color: RGB(29, 95, 57);
+  width: 100%;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+}
+.footer_politiqueConfi .footer_politiqueConfi_P {
+  font-size: 20px;
+  color: white;
+}
+
+.footer_container_github {
+  display: flex;
+}
+.footer_container_github img {
+  width: 90px;
 }
 
 .footer_container_icones {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 84%;
+  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
 }
 .footer_container_icones .footer_container_icones_list {
   list-style: none;
   display: flex;
+  align-content: center;
+  align-items: center;
+  width: 18%;
 }
 .footer_container_icones .footer_container_icones_list .footer_container_icones_list_li {
   margin-right: 100px;
 }
 .footer_container_icones .footer_container_icones_list .footer_container_icones_list_li img {
-  width: 50px;
+  width: 30px;
 }/*# sourceMappingURL=style.css.map */
