--- a/assets/scss/footer/_footer.scss
+++ b/assets/scss/footer/_footer.scss
@@ -10,9 +10,8 @@
     .footer_contact {
         width: 20%;
     }
-}
+}}
 
-.footer_container_contact {
 .footer_container_contact {
     display: flex;
     justify-content: space-between;
