--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -47,7 +47,6 @@ p, h1, h2, h3, h4, h5, h6 {
   width: 100%;
   margin: 0;
   z-index: 1;
-  z-index: 1;
 }
 .section-home .navbar .nav_menu {
   display: flex;
@@ -59,8 +58,14 @@ p, h1, h2, h3, h4, h5, h6 {
   list-style-type: none;
   font-family: "Fraunces";
 }
+.section-home .navbar .nav_button {
+  color: white;
+  text-decoration: none;
+  list-style-type: none;
+  font-family: "Fraunces";
+}
 @media (max-width: 500px) {
-  .section-home .navbar .nav_menu {
+  .section-home .navbar .nav_button {
     display: none;
   }
 }
@@ -76,7 +81,7 @@ p, h1, h2, h3, h4, h5, h6 {
   padding: 1%;
   padding: 1%;
   width: auto;
-  margin: 1%;
+  margin: 3%;
 }
 .section-home .navbar .panier {
   height: 40px;
@@ -101,20 +106,14 @@ p, h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 .section-home .intro h1 {
+  font-family: "Fraunces", sans-serif;
   font-weight: 800;
   font-size: 60px;
   letter-spacing: 10px;
-  margin: 5%;
-  padding: 5%;
   font-family: "Fraunces", sans-serif;
-  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
   text-shadow: 5px 5px 5px black;
-}
-@media (max-width: 500px) {
-  .section-home .intro h1 {
-    font-size: 35px;
-  }
 }
 .section-home .intro p {
   font-weight: 400;
@@ -126,11 +125,21 @@ p, h1, h2, h3, h4, h5, h6 {
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
   text-shadow: 5px 5px 5px black;
+  font-family: "Fraunces", sans-serif;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
 }
 @media (max-width: 500px) {
   .section-home .intro p {
     font-size: 20px;
   }
+}
+.section-home .intro .arrow-down {
+  display: flex;
+  justify-content: center;
+  padding: 7%;
+  margin: 1%;
+  animation: gelatine 0.5s infinite;
 }
 .section-home .arrow-down {
   display: flex;
@@ -246,20 +255,23 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-@keyframes gelatine {
-  from, to {
-    transform: scale(1, 1);
-  }
-  25% {
-    transform: scale(0.9, 1.1);
-  }
-  50% {
-    transform: scale(1.1, 0.9);
-  }
-  75% {
-    transform: scale(0.95, 1.05);
-  }
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
 }
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+#root, #__next {
+  isolation: isolate;
+}
+
 /* BODY CARD */
 #card-container {
   display: flex;
@@ -354,6 +366,17 @@ body {
     text-decoration: none;
     padding-top: 8px;
   }
+  .card__order {
+    background-color: #215F3F;
+    color: white;
+    border-radius: 10px;
+    width: 400px;
+    text-align: center;
+    margin: auto;
+    height: 40px;
+    text-decoration: none;
+    padding-top: 8px;
+  }
   .card__lien a:hover {
     text-transform: uppercase;
     transform: scale(1.05);
@@ -370,10 +393,6 @@ body {
   }
   #filter-buttons {
     text-align: center;
-    margin: auto;
-    height: 40px;
-    text-decoration: none;
-    padding-top: 8px;
   }
 }
 .footer_container_icones_list {
@@ -389,8 +408,11 @@ body {
 }
 .footer .footer_contact {
   width: 20%;
+  background-color: #426d4a;
 }
-
+.footer .footer_contact .footer_contact {
+  width: 20%;
+}
 
 .footer_container_contact {
   display: flex;
@@ -440,14 +462,229 @@ body {
   align-items: center;
   width: 84%;
   filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
+  width: 84%;
+  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
 }
 .footer_container_icones .footer_container_icones_list {
   list-style: none;
   display: flex;
+  align-content: center;
+  align-items: center;
+  width: 18%;
+  align-content: center;
+  align-items: center;
+  width: 18%;
 }
 .footer_container_icones .footer_container_icones_list .footer_container_icones_list_li {
   margin-right: 100px;
+  margin-right: 100px;
 }
 .footer_container_icones .footer_container_icones_list .footer_container_icones_list_li img {
+  width: 30px;
+  width: 30px;
+}
+
+/* BODY CARD */
+#card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: center;
+  z-index: -1;
+}
+
+.h2main {
+  font-size: 34px;
+  color: #215F3F;
+  font-family: "Fraunces";
+  text-align: center;
+}
+
+@media (min-width: 470px) {
+  .desktop-image {
+    display: block;
+    display: block;
+    width: 400px;
+    height: 380px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .card {
+    width: 400px;
+    border-radius: 20px;
+    background-color: white;
+    margin: 20px;
+    box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
+    position: relative;
+  }
+  .card__genre {
+    margin-top: 0px;
+    padding-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 15px;
+    color: hsl(228, 12%, 48%);
+    font-family: "Montserrat";
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+  }
+  .card__nom {
+    padding-left: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-size: 20px;
+    font-family: "Fraunces";
+    color: #215F3F;
+  }
+  .card__prix {
+    padding-left: 20px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    font-size: medium;
+    font-family: "Fraunces";
+  }
+  .card__ingredients {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 15px;
+    font-family: "Montserrat";
+    font-weight: 500;
+    margin: 5px 5px 10px 0px;
+  }
+  .card__note {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+  }
+  .card__lien {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    font-family: "Montserrat";
+    font-weight: 500;
+  }
+  .card__order {
+    background-color: #215F3F;
+    color: white;
+    border-radius: 10px;
+    width: 400px;
+    text-align: center;
+    margin: auto;
+    height: 40px;
+    text-decoration: none;
+    padding-top: 8px;
+  }
+  .card__order {
+    background-color: #215F3F;
+    color: white;
+    border-radius: 10px;
+    width: 400px;
+    text-align: center;
+    margin: auto;
+    height: 40px;
+    text-decoration: none;
+    padding-top: 8px;
+  }
+  .card__lien a:hover {
+    text-transform: uppercase;
+    transform: scale(1.05);
+    transition-duration: 200ms;
+  }
+  .card:hover {
+    transform: scale(1.05);
+    transition-duration: 200ms;
+  }
+  .content {
+    background-color: white;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+  #filter-buttons {
+    text-align: center;
+  }
+}
+.footer {
+  width: 100%;
+  background-color: #426d4a;
+}
+.footer .footer_contact {
+  width: 20%;
+  background-color: #426d4a;
+}
+.footer .footer_contact .footer_contact {
+  width: 20%;
+}
+
+.footer_container_contact {
+  display: flex;
+  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  font-family: "Dancing Script";
+  font-size: 20px;
+  padding-top: 35px;
+  color: white;
+}
+.footer_container_contact strong {
+  font-size: 45px;
+}
+.footer_container_contact img {
+  width: 450px;
+}
+
+.footer_contact_contact_items {
+  width: 20%;
+}
+
+.footer_politiqueConfi {
+  display: flex;
+  background-color: RGB(29, 95, 57);
+  width: 100%;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+}
+.footer_politiqueConfi .footer_politiqueConfi_P {
+  font-size: 20px;
+  color: white;
+}
+
+.footer_container_github {
+  display: flex;
+}
+.footer_container_github img {
+  width: 90px;
+}
+
+.footer_container_icones {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 84%;
+  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
+  width: 84%;
+  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
+}
+.footer_container_icones .footer_container_icones_list {
+  list-style: none;
+  display: flex;
+  align-content: center;
+  align-items: center;
+  width: 18%;
+  align-content: center;
+  align-items: center;
+  width: 18%;
+}
+.footer_container_icones .footer_container_icones_list .footer_container_icones_list_li {
+  margin-right: 100px;
+  margin-right: 100px;
+}
+.footer_container_icones .footer_container_icones_list .footer_container_icones_list_li img {
+  width: 30px;
   width: 30px;
 }/*# sourceMappingURL=style.css.map */
