--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -79,9 +79,8 @@ p, h1, h2, h3, h4, h5, h6 {
 .section-home .navbar .logo {
   height: 100px;
   padding: 1%;
-  padding: 1%;
   width: auto;
-  margin: 3%;
+  margin-left: 12%;
 }
 .section-home .navbar .panier {
   height: 40px;
@@ -114,6 +113,19 @@ p, h1, h2, h3, h4, h5, h6 {
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
   text-shadow: 5px 5px 5px black;
+  padding: 5%;
+  margin: 5%;
+  margin-top: 10%;
+}
+@media (max-width: 500px) {
+  .section-home .intro h1 {
+    font-size: 20px;
+  }
+}
+@media (max-width: 375px) {
+  .section-home .intro h1 {
+    margin-top: 25%;
+  }
 }
 .section-home .intro p {
   font-weight: 400;
@@ -125,9 +137,6 @@ p, h1, h2, h3, h4, h5, h6 {
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
   text-shadow: 5px 5px 5px black;
-  font-family: "Fraunces", sans-serif;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
 }
 @media (max-width: 500px) {
   .section-home .intro p {
