--- a/assets/scss/footer/_footer.scss
+++ b/assets/scss/footer/_footer.scss
@@ -78,6 +78,7 @@
         align-content: center;
         align-items: center;
         width: 18%;
+        justify-content: center;
         
        
         
