--- a/assets/scss/footer/_footer.scss
+++ b/assets/scss/footer/_footer.scss
@@ -1,15 +1,15 @@
-<<<<<<< HEAD
-
-=======
->>>>>>> alexis
 .footer {
     width: 100%;
     background-color: #426d4a;
 
     .footer_contact {
         width: 20%;
+    background-color: #426d4a;
+
+    .footer_contact {
+        width: 20%;
     }
-}
+}}
 
 .footer_container_contact {
     display: flex;
@@ -21,7 +21,7 @@
     font-size: 20px;
     padding-top: 35px; 
     color: white;
-    
+
     strong {
         font-size: 45px;
     }
@@ -62,24 +62,33 @@
     align-items: center;
     width: 84%;
     filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
-    
-   
+
+    width: 84%;
+    filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
+
+
 
     .footer_container_icones_list {
         list-style: none;
-        display: flex;   
+        display: flex;
         align-content: center;
         align-items: center;
         width: 18%;
-        
-       
-        
-    
+        align-content: center;
+        align-items: center;
+        width: 18%;
+
+
+
+
         .footer_container_icones_list_li {
             margin-right: 100px;
-            
-            
+
+            margin-right: 100px;
+
+
             img {
+                width: 30px;
                 width: 30px;
             }
 
