--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -51,8 +51,8 @@ p, h1, h2, h3, h4, h5, h6 {
 .section-home .navbar .nav_menu {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  width: 33%;
+  justify-content: space-around;
+  width: 50%;
   align-items: center;
   margin: 3%;
   list-style-type: none;
@@ -61,25 +61,38 @@ p, h1, h2, h3, h4, h5, h6 {
 .section-home .navbar .nav_button {
   color: white;
   text-decoration: none;
+  list-style-type: none;
+  font-family: "Fraunces";
+}
+@media (max-width: 500px) {
+  .section-home .navbar .nav_button {
+    display: none;
+  }
+}
+.section-home .navbar .nav_button {
+  color: white;
+  text-decoration: none;
+}
+.section-home .navbar .nav_text {
+  margin: 2%;
 }
 .section-home .navbar .logo {
   height: 100px;
   padding: 1%;
   width: auto;
+  margin-left: 12%;
+}
+.section-home .navbar .panier {
+  height: 40px;
+  background-color: invert(98%) sepia(100%) saturate(0%) hue-rotate(289deg) brightness(102%) contrast(102%);
   margin: 1%;
 }
-<<<<<<< HEAD
 .section-home .navbar .custom-button {
   background-color: #ffffff;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
-=======
-.section-home .navbar .panier {
-  height: 40px;
-  background-color: invert(98%) sepia(100%) saturate(0%) hue-rotate(289deg) brightness(102%) contrast(102%);
->>>>>>> alexis
 }
 .section-home .row {
   display: none;
@@ -92,22 +105,52 @@ p, h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 .section-home .intro h1 {
+  font-family: "Fraunces", sans-serif;
   font-weight: 800;
   font-size: 60px;
   letter-spacing: 10px;
   font-family: "Fraunces", sans-serif;
-  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
+  text-shadow: 5px 5px 5px black;
+  padding: 5%;
+  margin: 5%;
+  margin-top: 10%;
+}
+@media (max-width: 500px) {
+  .section-home .intro h1 {
+    font-size: 20px;
+  }
+}
+@media (max-width: 375px) {
+  .section-home .intro h1 {
+    margin-top: 25%;
+  }
 }
 .section-home .intro p {
   font-weight: 400;
   font-size: 36px;
   letter-spacing: 2px;
+  padding: 5%;
+  margin: 5%;
   font-family: "Fraunces", sans-serif;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
+  text-shadow: 5px 5px 5px black;
+}
+@media (max-width: 500px) {
+  .section-home .intro p {
+    font-size: 20px;
+  }
 }
 .section-home .intro .arrow-down {
+  display: flex;
+  justify-content: center;
+  padding: 7%;
+  margin: 1%;
+  animation: gelatine 0.5s infinite;
+}
+.section-home .arrow-down {
   display: flex;
   justify-content: center;
   padding: 7%;
@@ -129,6 +172,77 @@ p, h1, h2, h3, h4, h5, h6 {
     transform: scale(0.95, 1.05);
   }
 }
+.onoff {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  display: none;
+}
+
+.darkmode-button {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  display: none;
+}
+
+.toggle {
+  position: relative;
+}
+
+.toggle input {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.toggle .onoff {
+  color: #fff;
+  font-size: 6em;
+  text-align: center;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.slider {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  background-color: #333;
+  transition: 0.4s;
+  width: 50px;
+  height: 30px;
+}
+
+.slider:before {
+  content: "";
+  position: absolute;
+  height: 25px;
+  width: 25px;
+  background-color: #fff;
+  transition: 0.4s;
+  top: 2.5px;
+  left: 2.5px;
+}
+
+input:checked + .slider {
+  background-color: #fd5d00;
+  box-shadow: 0 0 3px #fd5d00;
+}
+
+input:checked + .slider:before {
+  transform: translateX(20px);
+}
+
+.slider.round {
+  border-radius: 5px;
+}
+
+.slider.round::before {
+  border-radius: 5px;
+}
+
 /* BODY CARD */
 #card-container {
   display: flex;
@@ -146,114 +260,235 @@ p, h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
-@media (min-width: 470px) {
-  .desktop-image {
-    display: block;
-    display: block;
-    width: 400px;
-    height: 380px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    -o-object-fit: cover;
-       object-fit: cover;
+@media (max-width: 349px) {
+  .img-vege {
+    display: none;
+    width: 0px;
+    max-width: 0px;
   }
-  .card {
-    width: 400px;
-    border-radius: 20px;
-    background-color: white;
-    margin: 20px;
-    box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
-    position: relative;
-  }
-  .card__genre {
-    margin-top: 0px;
-    padding-left: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 15px;
-    color: hsl(228, 12%, 48%);
-    font-family: "Montserrat";
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.2rem;
-  }
-  .card__nom {
-    padding-left: 20px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    font-size: 20px;
-    font-family: "Fraunces";
-    color: #215F3F;
-  }
-  .card__prix {
-    padding-left: 20px;
-    margin-bottom: 10px;
-    margin-top: 5px;
-    font-size: medium;
-    font-family: "Fraunces";
-  }
-  .card__ingredients {
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 15px;
-    font-family: "Montserrat";
-    font-weight: 500;
-    margin: 5px 5px 10px 0px;
-  }
-  .card__note {
-    display: flex;
-    flex-direction: column;
-    padding-left: 20px;
-  }
-  .card__lien {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    font-family: "Montserrat";
-    font-weight: 500;
-  }
-  .card__order {
-    background-color: #215F3F;
-    color: white;
-    border-radius: 10px;
-    width: 400px;
+  .mission-container__content {
+    width: 100%;
     text-align: center;
-    margin: auto;
-    height: 40px;
-    text-decoration: none;
-    padding-top: 8px;
+    margin-left: 0px;
   }
-  .card__lien a:hover {
-    text-transform: uppercase;
-    transform: scale(1.05);
-    transition-duration: 200ms;
-  }
-  .card:hover {
-    transform: scale(1.05);
-    transition-duration: 200ms;
-  }
-  .content {
-    background-color: white;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-<<<<<<< HEAD
-  .order {
-    background-color: #215F3F;
-    color: white;
-    border-radius: 10px;
-    width: 400px;
-=======
-  #filter-buttons {
->>>>>>> alexis
+  #title-mission {
     text-align: center;
   }
 }
+.desktop-image {
+  display: block;
+  display: block;
+  width: 400px;
+  height: 380px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card {
+  width: 400px;
+  border-radius: 20px;
+  background-color: white;
+  margin: 20px;
+  box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+.card__genre {
+  margin-top: 0px;
+  padding-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 15px;
+  color: hsl(228, 12%, 48%);
+  font-family: "Montserrat";
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+}
+.card__nom {
+  padding-left: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  font-size: 20px;
+  font-family: "Fraunces";
+  color: #215F3F;
+}
+.card__prix {
+  padding-left: 20px;
+  margin-bottom: 10px;
+  margin-top: 5px;
+  font-size: medium;
+  font-family: "Fraunces";
+}
+.card__ingredients {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 15px;
+  font-family: "Montserrat";
+  font-weight: 500;
+  margin: 5px 5px 10px 0px;
+}
+.card__note {
+  display: flex;
+  flex-direction: column;
+  padding-left: 20px;
+}
+.card__lien {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  font-family: "Montserrat";
+  font-weight: 500;
+}
+.card__order {
+  background-color: #215F3F;
+  color: white;
+  border-radius: 10px;
+  width: 400px;
+  text-align: center;
+  margin: auto;
+  height: 40px;
+  text-decoration: none;
+  padding-top: 8px;
+}
+
+.card__lien a:hover {
+  text-transform: uppercase;
+  transform: scale(1.05);
+  transition-duration: 200ms;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  transition-duration: 200ms;
+}
+
+.content {
+  background-color: white;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+#filter-buttons {
+  text-align: center;
+}
+
+#filter-buttons button {
+  background-color: white;
+  border-color: green;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+
+#filter-buttons button:hover {
+  transform: scale(1.08);
+  transition-duration: 200ms;
+}
+
+#reset {
+  text-align: center;
+  margin-top: 10px;
+}
+
+#reset-button {
+  background-color: white;
+  border-color: red;
+  border-radius: 10px;
+  margin-right: 5px;
+}
+
+#reset-button:hover {
+  transform: scale(1.08);
+  transition-duration: 200ms;
+}
+
+.mission h2 {
+  font-size: 34px;
+  color: #215F3F;
+  font-family: "Fraunces";
+  text-align: center;
+}
+
+.mission {
+  width: 100%;
+  box-sizing: border-box;
+  padding-top: 64px;
+}
+.mission__title {
+  padding: 36px 0;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.mission__slogan {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-align: center;
+  font-family: "Montserrat";
+  font-weight: 500;
+  font-size: 22px;
+}
+
+.mission-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 64px;
+  margin-bottom: 64px;
+}
+.mission-container__content {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-left: 24px;
+  line-height: 1.4;
+  margin-top: 48px;
+  margin-right: 24px;
+  width: 50%;
+}
+
+.img-vege {
+  width: 50%;
+  margin: 0 24px;
+  aspect-ratio: 8/7;
+  position: relative;
+}
+
+figure img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+.mission-container__content h3 {
+  font-size: 34px;
+  color: #215F3F;
+  font-family: "Fraunces";
+  text-align: left;
+  padding-bottom: 24px;
+}
+
+.mission-container__content p {
+  font-family: "Montserrat";
+  font-weight: 500;
+  font-size: 16px;
+}
+
 .footer {
   width: 100%;
   background-color: #426d4a;
 }
 .footer .footer_contact {
+  width: 20%;
+  background-color: #426d4a;
+}
+.footer .footer_contact .footer_contact {
   width: 20%;
 }
 
@@ -305,6 +540,8 @@ p, h1, h2, h3, h4, h5, h6 {
   align-items: center;
   width: 84%;
   filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
+  width: 84%;
+  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
 }
 .footer_container_icones .footer_container_icones_list {
   list-style: none;
@@ -312,10 +549,23 @@ p, h1, h2, h3, h4, h5, h6 {
   align-content: center;
   align-items: center;
   width: 18%;
+  align-content: center;
+  align-items: center;
+  width: 18%;
 }
 .footer_container_icones .footer_container_icones_list .footer_container_icones_list_li {
+  margin-right: 100px;
   margin-right: 100px;
 }
 .footer_container_icones .footer_container_icones_list .footer_container_icones_list_li img {
   width: 30px;
+  width: 30px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: #fff;
+}
+.dark-mode .section-home {
+  background: url("../images/darkmode-image.png") no-repeat center center fixed;
 }/*# sourceMappingURL=style.css.map */
