--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,14 +1,7 @@
 
 @import'reset', 'header/header';
-<<<<<<< HEAD
 @import'bodycard';
 @import'footer/footer';
+@import 'darkmode.scss';
 
 
-
-=======
-
-@import'bodycard';
-
-@import'footer/footer';
->>>>>>> alexis
