--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -251,248 +252,6 @@ input:checked + .slider:before {
   background: url("../images/darkmode-image.png") no-repeat center center fixed;
 }
 
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-* {
-  margin: 0;
-}
-
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-img, picture, video, canvas, svg {
-  display: block;
-  max-width: 100%;
-}
-
-input, button, textarea, select {
-  font: inherit;
-}
-
-p, h1, h2, h3, h4, h5, h6 {
-  overflow-wrap: break-word;
-}
-
-#root, #__next {
-  isolation: isolate;
-}
-
-/* BODY CARD */
-#card-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  justify-content: center;
-  z-index: -1;
-}
-
-.h2main {
-  font-size: 34px;
-  color: #215F3F;
-  font-family: "Fraunces";
-  text-align: center;
-}
-
-@media (min-width: 470px) {
-  .desktop-image {
-    display: block;
-    display: block;
-    width: 400px;
-    height: 380px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .card {
-    width: 400px;
-    border-radius: 20px;
-    background-color: white;
-    margin: 20px;
-    box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
-    position: relative;
-  }
-  .card__genre {
-    margin-top: 0px;
-    padding-left: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 15px;
-    color: hsl(228, 12%, 48%);
-    font-family: "Montserrat";
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.2rem;
-  }
-  .card__nom {
-    padding-left: 20px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    font-size: 20px;
-    font-family: "Fraunces";
-    color: #215F3F;
-  }
-  .card__prix {
-    padding-left: 20px;
-    margin-bottom: 10px;
-    margin-top: 5px;
-    font-size: medium;
-    font-family: "Fraunces";
-  }
-  .card__ingredients {
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 15px;
-    font-family: "Montserrat";
-    font-weight: 500;
-    margin: 5px 5px 10px 0px;
-  }
-  .card__note {
-    display: flex;
-    flex-direction: column;
-    padding-left: 20px;
-  }
-  .card__lien {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    font-family: "Montserrat";
-    font-weight: 500;
-  }
-  .card__order {
-    background-color: #215F3F;
-    color: white;
-    border-radius: 10px;
-    width: 400px;
-    text-align: center;
-    margin: auto;
-    height: 40px;
-    text-decoration: none;
-    padding-top: 8px;
-  }
-  .card__order {
-    background-color: #215F3F;
-    color: white;
-    border-radius: 10px;
-    width: 400px;
-    text-align: center;
-    margin: auto;
-    height: 40px;
-    text-decoration: none;
-    padding-top: 8px;
-  }
-  .card__lien a:hover {
-    text-transform: uppercase;
-    transform: scale(1.05);
-    transition-duration: 200ms;
-  }
-  .card:hover {
-    transform: scale(1.05);
-    transition-duration: 200ms;
-  }
-  .content {
-    background-color: white;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-  #filter-buttons {
-    text-align: center;
-  }
-}
-.footer_container_icones_list {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-.footer {
-  width: 100%;
-  background-color: #426d4a;
-}
-.footer .footer_contact {
-  width: 20%;
-  background-color: #426d4a;
-}
-.footer .footer_contact .footer_contact {
-  width: 20%;
-}
-
-.footer_container_contact {
-  display: flex;
-  justify-content: space-between;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 100%;
-  font-family: "Dancing Script";
-  font-size: 20px;
-  padding-top: 35px;
-  color: white;
-}
-.footer_container_contact strong {
-  font-size: 45px;
-}
-.footer_container_contact img {
-  width: 450px;
-}
-
-.footer_contact_contact_items {
-  width: 20%;
-}
-
-.footer_politiqueConfi {
-  display: flex;
-  background-color: RGB(29, 95, 57);
-  width: 100%;
-  height: 50px;
-  justify-content: center;
-  align-items: center;
-}
-.footer_politiqueConfi .footer_politiqueConfi_P {
-  font-size: 20px;
-  color: white;
-}
-
-.footer_container_github {
-  display: flex;
-}
-.footer_container_github img {
-  width: 90px;
-}
-
-.footer_container_icones {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 84%;
-  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
-  width: 84%;
-  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
-}
-.footer_container_icones .footer_container_icones_list {
-  list-style: none;
-  display: flex;
-  align-content: center;
-  align-items: center;
-  width: 18%;
-  align-content: center;
-  align-items: center;
-  width: 18%;
-}
-.footer_container_icones .footer_container_icones_list .footer_container_icones_list_li {
-  margin-right: 100px;
-  margin-right: 100px;
-}
-.footer_container_icones .footer_container_icones_list .footer_container_icones_list_li img {
-  width: 30px;
-  width: 30px;
-}
-
 /* BODY CARD */
 #card-container {
   display: flex;
@@ -620,13 +379,6 @@ p, h1, h2, h3, h4, h5, h6 {
   width: 100%;
   background-color: #426d4a;
 }
-.footer .footer_contact {
-  width: 20%;
-  background-color: #426d4a;
-}
-.footer .footer_contact .footer_contact {
-  width: 20%;
-}
 
 .footer_container_contact {
   display: flex;
@@ -636,18 +388,77 @@ p, h1, h2, h3, h4, h5, h6 {
   width: 100%;
   font-family: "Dancing Script";
   font-size: 20px;
-  padding-top: 35px;
+  padding-top: 25px;
   color: white;
 }
+@media (max-width: 600px) {
+  .footer_container_contact {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.footer_container_contact .footer_contact {
+  width: 20%;
+  background-color: #426d4a;
+}
+@media (max-width: 600px) {
+  .footer_container_contact .footer_contact {
+    width: 40%;
+  }
+}
 .footer_container_contact strong {
-  font-size: 45px;
+  font-size: 35px;
 }
 .footer_container_contact img {
   width: 450px;
 }
+@media (max-width: 600px) {
+  .footer_container_contact .footer_container_about {
+    width: 40%;
+  }
+}
 
-.footer_contact_contact_items {
-  width: 20%;
+.footer_container_icones {
+  display: flex;
+  width: 100%;
+}
+.footer_container_icones img {
+  width: 90px;
+}
+.footer_container_icones .footer_container_icones_reseaux {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
+}
+.footer_container_icones .footer_container_icones_reseaux .footer_container_icones_reseaux_list {
+  list-style: none;
+  display: flex;
+  align-content: center;
+  align-items: center;
+}
+@media (max-width: 600px) {
+  .footer_container_icones .footer_container_icones_reseaux .footer_container_icones_reseaux_list {
+    margin-right: 30%;
+  }
+}
+.footer_container_icones .footer_container_icones_reseaux .footer_container_icones_reseaux_list .footer_container_icones_reseaux_list_li {
+  margin-right: 100px;
+  display: flex;
+  align-content: center;
+  align-items: center;
+}
+@media (max-width: 600px) {
+  .footer_container_icones .footer_container_icones_reseaux .footer_container_icones_reseaux_list .footer_container_icones_reseaux_list_li {
+    margin-right: 30px;
+    margin-top: 35px;
+    margin-bottom: 35px;
+    width: 20px;
+  }
+}
+.footer_container_icones .footer_container_icones_reseaux .footer_container_icones_reseaux_list .footer_container_icones_reseaux_list_li img {
+  width: 30px;
 }
 
 .footer_politiqueConfi {
@@ -663,37 +474,39 @@ p, h1, h2, h3, h4, h5, h6 {
   color: white;
 }
 
-.footer_container_github {
-  display: flex;
-}
-.footer_container_github img {
-  width: 90px;
+/* Style pour la fenêtre modale */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
 }
 
-.footer_container_icones {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 84%;
-  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
-  width: 84%;
-  filter: invert(30%) sepia(115%) saturate(59%) hue-rotate(836deg) brightness(201%) contrast(247%);
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
+  text-align: center;
 }
-.footer_container_icones .footer_container_icones_list {
-  list-style: none;
-  display: flex;
-  align-content: center;
-  align-items: center;
-  width: 18%;
-  align-content: center;
-  align-items: center;
-  width: 18%;
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
 }
-.footer_container_icones .footer_container_icones_list .footer_container_icones_list_li {
-  margin-right: 100px;
-  margin-right: 100px;
-}
-.footer_container_icones .footer_container_icones_list .footer_container_icones_list_li img {
-  width: 30px;
-  width: 30px;
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
